2009-12-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#150091 P/L switching fails in call-ui while making an
		  outgoing call from contacts

	Subview transition in progres (Contact details -> All contacts),
	gets interrupted by the topping of Phone, restack, set_visibilities,
	subview transition completes, messes up visibilities, may_be_portrait
	gets dicouraged and doesn't turn to portrait, tester complains.

	* src/home/hd-render-manager (hd_render_manager_set_visibilities):
	  Publicized.
	* src/util/hd-transition.c (hd_transition_completed):
	  set_visibilities() when all of certain kinds of transition are done
	* src/util/hd-transition.c (hd_transition_popup, hd_transition_fade, hd_transition_subview):
	  them

2009-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	Add support for Russian Cyrillic keyboard layout to Contacts live
	search started by home.

	Fixes: NB#143334 - Impossible to make a lookup in the address book
	with Cyrillic keyboard layout

	* src/home/hd-home.c (hd_home_desktop_press,
	  is_russian_cyrillic_keyboard,
	  get_keyval_for_russian_cyrillic_keyboard,
	  hd_home_desktop_key_press): Shift the level when a Russian Cyrillic
	  keyboard is in use.

2009-12-10  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix of the fix of NB#149091 - Urho's pet feature not working properly,
	which caused an effect similar to NB#142364 - Desktop stayed in portrait
	when you enabled launching Phone by rotating and you close it in portrait
	orientation.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_may_be_portrait):
	  You may not be if there's no clients supporting it, not even
	  if assume_requested.  (When portrait_or_not_portrait() asked
	  for a re-evaluation it was pip_enabled and pip_portrait and
	  because of assume_requested can_be_portrait() as well which
	  prevented from unportrait()ification).

2009-12-09  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Fix of the fix of the fix of NB#149091.  hd assert() failed