@@ -1,3 +1,8 @@
+2009-12-14  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/home/hd-home.c (root_window_client_message):
+	  Notify the client when the screenshot is done + refactorization.
+
 2009-12-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	NB#150091 P/L switching fails in call-ui while making an
